--- a/location.html
+++ b/location.html
@@ -29,14 +29,12 @@
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Our Market</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="market.html">Our Market</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="location.html">Location</a></li>
                 </ul>
             </div>
         </div>
