--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <body id="page-top" style="margin-top: 15px;">
     <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin-bottom: 5px;margin-top: 5px;padding-top: 0px;padding-right: 26px;padding-bottom: 23px;background: linear-gradient(rgb(0,160,137), rgb(2,113,89));">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="padding-top: 0px;margin-top: 8px;"></a>
-            <h1 style="margin-bottom: -20px;font-family: Courgette, cursive;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <h1 style="margin-bottom: -20px;font-family:Poppins, sans-serif;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
@@ -53,9 +53,9 @@
                             <div></div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding: 20px;background: #027f62;margin-left: 6px;margin-right: -14px;">
-                            <h1 style="margin-right: 0px;margin-left: 36px;">Sanrax Global Pte. Ltd.</h1>
+                            <h1 style="margin-right: 0px;margin-left: 36px;font-family:Poppins, sans-serif">Sanrax Global Pte. Ltd.</h1>
                             <hr>
-                            <p style="margin-bottom: 10px;margin-left: 34px;"><br>We are a leading Global Exporters company of Palm Oil Products for the past decade. We are proud to have great number of satisfied customers who desire our products in mainly the following categories: Oleochemicals, Glycerine,
+                            <p style="margin-bottom: 10px;margin-left: 34px;font-family:Poppins, sans-serif"><br>We are a leading Global Exporters company of Palm Oil Products for the past decade. We are proud to have great number of satisfied customers who desire our products in mainly the following categories: Oleochemicals, Glycerine,
                                 Soap Noodles, Perfumes, PFAD, Palm Stearin, Palm Acid Oil.<br><br></p>
                             <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
                         </div>
