--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 <body id="page-top" style="margin-top: 15px;">
     <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin-bottom: 5px;margin-top: 5px;padding-top: 0px;padding-right: 26px;padding-bottom: 23px;background: linear-gradient(rgb(0,160,137), rgb(2,113,89));">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="padding-top: 0px;margin-top: 8px;"></a>
-            <h1 style="margin-bottom: -20px;font-family: Courgette, cursive;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <h1 style="margin-bottom: -20px;Poppins, sans-serif;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
@@ -155,7 +155,7 @@
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
                                 <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
+                                    <h2 class="text-uppercase">P</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1-full.jpg">
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
                                         cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
