--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             </div>
         </div>
     </nav>
+    <marquee width="100%" behavior="scroll" bgcolor="#05795f" font-family="Poppins">  
+        This is an example of a scroll marquee...  
+        </marquee> 
     <header class="masthead" style="background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain space;margin-top: -9px;margin-bottom: -246px;margin-right: -24px;padding: 99px;">
         <div class="container">
             <div class="intro-text" style="margin-right: 7px;"></div>
