--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
         </div>
     </nav>
-    <marquee width="100%" behavior="scroll" bgcolor="#05795f" font-family="Poppins">  
-        This is an example of a scroll marquee...  
+    <marquee width="200%" behavior="scroll" background=linear-gradient(rgb(0,160,137),rgb(2,113,89) font-family="Poppins">  
+        Marquee Installed. You will get scrolling text like this - Harsh  
         </marquee> 
     <header class="masthead" style="background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain space;margin-top: -9px;margin-bottom: -246px;margin-right: -24px;padding: 99px;">
         <div class="container">
