--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </nav>
-    <marquee width="200%" behavior="scroll" fontcolor="white" style="background: linear-gradient(rgb(0,160,137), rgb(2,113,89));">  
+    <marquee  style="font-family: Poppins, sans-serif;color: #ffffff;background: linear-gradient(rgb(0,160,137), rgb(2,113,89))" >  
         Marquee Installed. You will get scrolling text like this - Harsh  
         </marquee> 
     <header class="masthead" style="background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain space;margin-top: -9px;margin-bottom: -246px;margin-right: -24px;padding: 99px;">
