--- a/location.html
+++ b/location.html
@@ -39,8 +39,8 @@
             </div>
         </div>
     </nav>
-    <section style="margin-top: -159px;">
-        <div class="bg-white" style="padding-top: 60px;padding-bottom: 30px;">
+    <section style="margin-top: -159px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
+        <div class="bg-white" style="padding-top: 60px;padding-bottom: 30px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
             <div class="container" style="padding-bottom: 10px;">
                 <div class="text-center">
                     <h4 style="color: #23295f;font-size: 45px;margin-top: 15px;font-family: Poppins, sans-serif;"><strong>Our Location</strong></h4>
