--- a/market.html
+++ b/market.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <section style="margin-top: -159px;margin-bottom: -213px;"></section>
-    <div class="footer-clean" style="background: rgb(255,255,255);margin-top: 87px;">
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <div class="row clearmargin clearpadding row-image-txt">
             <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6" style="height: 400px;background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain;">
                 <div></div>
