--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section id="about">
+    <section style="background: linear-gradient(rgb(194,176,159) 100%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
