--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <section class="getintouch" style="margin-top: -155px;">
+    <section class="getintouch" style="margin-top: -155px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%)">
         <div class="container modern-form">
             <div class="text-center">
                 <h4 style="color: #212529;font-size: 45px;">Get in touch</h4>
@@ -80,7 +80,7 @@
             </div>
         </div>
     </section>
-    <div class="footer-clean" style="background: rgb(255,255,255);">
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
