--- a/products.html
+++ b/products.html
@@ -110,8 +110,8 @@
             </div>
         </div>
     </section>
-    <section class="py-5"></section>
-    <div class="footer-clean" style="background: rgb(255,255,255);">
+    
+    <div class="footer-clean" style="background: linear-gradient(rgba(194, 176, 159, 0.836) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
