--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section style="background: linear-gradient(rgb(194,176,159) 100%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
+    <section style="background: linear-gradient(rgb(224, 207, 190) 100%, white 33%, rgb(255,255,255) 71%, rgb(224, 207, 190) 100%);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -145,7 +145,6 @@
             </div>
         </div>
     </section>
-    <section class="py-5"></section>
     <section id="contact" style="background: linear-gradient(rgb(2,127,98), rgb(252,252,252) 28%, rgb(88,189,164)), rgb(0,161,133);">
         <div class="container">
             <div class="row">
@@ -176,10 +175,10 @@
             </div>
         </div>
     </section>
-    <div class="footer-clean" style="background: rgb(255,255,255);">
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" >
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
                     <div class="col-sm-4 col-md-3 item-srv">
                         <h3>Control menu</h3>
