--- a/market.html
+++ b/market.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/Contattigmap.css">
     <link rel="stylesheet" href="assets/css/dh-row-text-image-right-responsive.css">
     <link rel="stylesheet" href="assets/css/footer-ultimate.css">
     <link rel="stylesheet" href="assets/css/gradient-navbar-1.css">
@@ -29,30 +28,46 @@
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="market.html">Our Market</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="location.html">Location</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#">Our Market</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section style="margin-top: -159px;margin-bottom: -213px;"></section>
-    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
-        <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6" style="height: 400px;background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain;">
-                <div></div>
+    <section id="about" style="margin-top: -86px;background: linear-gradient(rgb(194,176,159), #ffffff 36%, rgb(255,255,255) 69%, rgb(194,176,159));">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-uppercase">Our Market&nbsp;</h2>
+                    <h3 class="text-muted section-subheading"></h3>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
-                <h1>Our Market</h1>
-                <hr>
-                <p><br><br>We classify ourselves in a sustainable manufacturing market place where there is harmony between nature and business! We believe eco-friendly businesses are the way to go...<br><br><br></p>
-                <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row clearmargin clearpadding row-image-txt" style="background: rgb(2,127,98);">
+                        <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6" style="height: 347px;background: url(&quot;assets/img/Screenshot%202020-11-29%20211103.png&quot;) center / cover;margin-top: 4px;max-width: -165px;margin-right: 0px;margin-left: 6px;margin-bottom: 6px;">
+                            <div></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding: 20px;background: #027f62;margin-left: 6px;margin-right: -14px;">
+                            <h1 style="margin-right: 0px;margin-left: 36px;font-family: Poppins, sans-serif;">Sanrax Global Pte. Ltd.</h1>
+                            <hr>
+                            <p style="margin-bottom: 10px;margin-left: 34px;font-family: Poppins, sans-serif;"><br>We&nbsp;classify&nbsp;ourselves&nbsp;in&nbsp;a&nbsp;sustainable&nbsp;manufacturing&nbsp;market&nbsp;place&nbsp;where&nbsp;there&nbsp;is&nbsp;harmony&nbsp;between&nbsp;nature&nbsp;and&nbsp;business!&nbsp;We&nbsp;believe&nbsp;eco-friendly&nbsp;businesses&nbsp;are&nbsp;the&nbsp;way&nbsp;to&nbsp;go...<br><br></p>
+                            <div
+                                style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <footer style="margin-top: 94px;">
+        </div>
+    </section>
+    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159), #ffffff 36%, rgb(255,255,255) 67%, rgb(194,176,159)), rgb(255,255,255);">
+        <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
