--- a/location.html
+++ b/location.html
@@ -41,7 +41,7 @@
     </nav>
     <section style="margin-top: -159px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
         <div class="bg-white" style="padding-top: 60px;padding-bottom: 30px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
-            <div class="container" style="padding-bottom: 10px;">
+            <div class="container" style="padding-bottom: 10px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
                 <div class="text-center">
                     <h4 style="color: #23295f;font-size: 45px;margin-top: 15px;font-family: Poppins, sans-serif;"><strong>Our Location</strong></h4>
                     <hr style="border-color: rgb(0,0,0);width: 121px;">
@@ -62,7 +62,7 @@
     <div class="footer-clean" style="background: rgb(255,255,255);">
         <footer>
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" style="background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
                     <div class="col-sm-4 col-md-3 item-srv">
                         <h3>Control menu</h3>
