--- a/location.html
+++ b/location.html
@@ -61,7 +61,7 @@
     </section>
     <div class="footer-clean" style="background: rgb(255,255,255);">
         <footer>
-            <div class="container">
+            <div class="container" style="background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);>
                 <div class="row justify-content-center" style="background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
                     <div class="col-sm-4 col-md-3 item-srv">
