--- a/products.html
+++ b/products.html
@@ -96,11 +96,14 @@
                     <div class="portfolio-caption">
                         <h4>And Many More....</h4>
                         <p class="text-muted"></p>
+                        
                     </div>
+                    
                 </div>
             </div>
         </div>
     </section>
+    <section id="services" style="margin-right: -59px;"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="contact.html" style="margin-right: 0px;margin-bottom: 0px;margin-left: 671px;margin-top: 7px;">For Specification/ MSDS please enquire here.</a></section>>
     <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
