--- a/location.html
+++ b/location.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
                 <div class="row" style="margin-top: 44px;">
-                    <div class="col-md-12 col-lg-6" style="height: 483px;"><iframe src="https://www.google.co.in/maps/place/Society+of+Cosmetic+Scientists+(Singapore)/@1.3098033,103.7735024,18z/data=!4m8!1m2!2m1!1s1010,+Dover+Road,+%2301-192V+,+Singapore+-+139658!3m4!1s0x31da19cb63a2e77b:0x87b8c5338854dc35!8m2!3d1.3097009!4d103.7745844" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+                    <div class="col-md-12 col-lg-6" style="height: 483px;"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1994.387916120899!2d103.7735024!3d1.3098033!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19cb63a2e77b%3A0x87b8c5338854dc35!2sSociety%20of%20Cosmetic%20Scientists%20(Singapore)!5e0!3m2!1sen!2ssg!4v1607522476796!5m2!1sen!2ssg" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                     <div class="col-md-6 col-lg-3" style="margin-left: 214px;">
                         <h2 class="h4" style="margin-top: 35px;color: #00b5a8;border-color: #23295f;height: 49px;"><i class="fa fa-user" style="color: #00b5a8;"></i>&nbsp;Contact Us @</h2>
                         <div style="padding-top: 10px;"><span><strong>Mail</strong><br></span></div>
