--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,12 @@
             <h1 style="margin-bottom: -20px;font-family: Poppins, sans-serif;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Our Market</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color:black"><b>Home</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" style="color:black"><b>About Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html" style="color:black"><b>Products</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="market.html" style="color:black"><b>Our Market</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color:black"><b>Contact Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="location.html" style="color:black"><b>Location</a></b></li>
                 </ul>
             </div>
         </div>
